fix: remove line-height rule from intro heading which was cutting off y in Skyler

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -210,7 +210,6 @@ p {
     font-size: 5rem;
     font-weight: 400;
     margin: 0;
-    line-height: 110%;
     background: linear-gradient(to bottom right, rgb(255, 158, 103), rgb(240, 165, 255) 40%, rgb(1, 200, 255) 80%);
     background-clip: text;
     -webkit-background-clip: text;
